--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -12,7 +12,9 @@ jobs:
   publish-docs:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: Push prod
         run: |
           git config user.name github-actions
